<resources>
    <string name="app_name">ColouRing</string>
    <string name="action_settings">Settings</string>
    <string name="classic_mode_button">Classic</string>
    <string name="casual_mode_button">Casual Mode</string>
    <string name="tutorial_button">How to Play</string>
    <string name="options_button">Options</string>

    <string name="goback_text">Use the back button on your device to return to the main menu.</string>

    <string name="coming_soon_text">This game mode is still in development.\nLook forward to it in the near future!</string>

    <string name="tutorial_text_1">ColouRing is a simple yet addicting game to play.\n\nLet\'s get started!\n\n\n TO PROCEED --></string>
    <string name="tutorial_text_2">The objective of ColouRing is to form the best possible colour gradient from the inner circle to the outer ring.</string>
    <string name="tutorial_text_3">In order to select a colour, tap on one of the four sections of each ring. The other sections of that ring will be grayed out.</string>
    <string name="tutorial_text_4">Continue to work your way out of the circle. Keep in mind that the selected path must be connected between rings.</string>
    <string name="tutorial_text_5">If you have chosen an incorrect path, you will not proceed. The path can be deselected by tapping in each ring again.</string>
    <string name="tutorial_text_6">If you have chosen the correct path, you will proceed to the next round. Complete all 10 rounds as fast as you can!</string>

    <string name="options_title">Options</string>
    <string name="reset_button">Reset Data</string>

    <string name="about_button">About</string>
    <string name="about_text">We, the developers from Focus Studios, thank you for downloading and hope you enjoyed playing our game!\n\n
        If you have any problems or suggestions for the game, please email them to\nfocusstudiosgames@gmail.com.\n\n
        Team:\n
        Lead Algorithm Developer: Kelvin Jiang\n
        Lead GUI Designer: Patrick Zhang\n\n
        Special thanks to Angelina Jin for the app icon design!
    </string>

    <string name="title_activity_classic_game">ClassicGameActivity</string>
    <string name="title_activity_casual_game">CasualGameActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

    <string name="paused_title">PAUSED</string>
    <string name="music_text">Music</string>
    <string name="sfx_text">SFX</string>
    <string name="home_button">Main Menu</string>
    <string name="restart_button">Restart</string>

</resources>