<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="80dp"
            android:textColor="#f09440"/>
        <TextView
            android:id="@+id/title_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="80dp"
            android:layout_toRightOf="@+id/title_label1"
            android:textColor="#329beb"/>
    </RelativeLayout>


    <Button
        android:id="@+id/classic_mode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classic_mode_button"
        android:textSize="30dp"
        android:background="#04536E"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <Button
        android:id="@+id/casual_mode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/casual_mode_button"
        android:textSize="30dp"
        android:background="#04536E"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <Button
        android:id="@+id/options_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_button"
        android:textSize="30dp"
        android:background="#04536E"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <Button
        android:id="@+id/tutorial_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_button"
        android:textSize="30dp"
        android:background="#04536E"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:textSize="30dp"
        android:background="#04536E"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

</LinearLayout>